// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lad-tech/mobydick-core/modalBase should renders correctly AlertContent type = check 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "rgba(91, 153, 249, 0.1)",
        "borderRadius": 100,
        "padding": 12,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      {
        "color": "#2B78EE",
        "fontFamily": "Neotis",
        "fontSize": 36,
      }
    }
  >
    
  </Text>
</View>
`;

exports[`@lad-tech/mobydick-core/modalBase should renders correctly AlertContent type = warning 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "rgba(91, 153, 249, 0.1)",
        "borderRadius": 100,
        "padding": 12,
      },
      {
        "backgroundColor": "#fff",
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      {
        "color": "#fff",
        "fontFamily": "Neotis",
        "fontSize": 36,
      }
    }
  >
    
  </Text>
</View>
`;
